--- a/eduwanyue_web/themes/admin_htcyltd/admin/rbac/authorize.html
+++ b/eduwanyue_web/themes/admin_htcyltd/admin/rbac/authorize.html
@@ -1,5 +1,8 @@
 <include file="public@header" />
-<style>html {background-color: #ffffff;}.expander{margin-left: -20px;}.layui-table[lay-skin="nob"] td{border: none;}</style>
+<style>
+	html {background-color: #ffffff;}.expander{margin-left: -20px;}.layui-table[lay-skin="nob"] td{border: none;}
+.layui-unselect{margin-top: 0px !important;}
+</style>
 </head>
 <body>
 <div class="js-check-wrap">
