--- a/eduwanyue_web/themes/admin_htcyltd/portal/admin_article/index.html
+++ b/eduwanyue_web/themes/admin_htcyltd/portal/admin_article/index.html
@@ -44,13 +44,13 @@
                             <div class="layui-inline">
                                 <label class="layui-form-label">时间</label>
                                 <div class="layui-input-inline">
-                                    <input type="text" class="layui-input js-bootstrap-datetime" name="start_time"
+                                    <input type="text" class="layui-input js-bootstrap-date" name="start_time"
                                            value="{$start_time|default=''}"
                                            autocomplete="off" placeholder="开始日期">
                                 </div>
                                 <div class="layui-form-mid">-</div>
                                 <div class="layui-input-inline">
-                                    <input type="text" class="layui-input js-bootstrap-datetime" name="end_time"
+                                    <input type="text" class="layui-input js-bootstrap-date" name="end_time"
                                            value="{$end_time|default=''}"
                                            autocomplete="off" placeholder="结束日期">
                                 </div>
