--- a/eduwanyue_web/themes/admin_htcyltd/admin/course/edit.html
+++ b/eduwanyue_web/themes/admin_htcyltd/admin/course/edit.html
@@ -75,6 +75,17 @@
                                 </select>
                             </div>
                         </div>
+
+                        <div class="layui-form-item">
+                            <label for="input-name" class="layui-form-label"><span class="form-required">*</span>科目分类</label>
+                            <div class="layui-input-block">
+                                <select class="layui-input" name="classid">
+                                    <volist name="classs" id="v">
+                                        <option value="{$v['id']}" <eq name="data['classid']" value="$v['id']">selected</eq> >{$v['name']}</option>
+                                    </volist>
+                                </select>
+                            </div>
+                        </div>
                     
                         <div class="layui-form-item">
                             <label for="input-name" class="layui-form-label"><span class="form-required">*</span>名称</label>
