--- a/eduwanyue_web/themes/admin_htcyltd/admin/course/edit.html
+++ b/eduwanyue_web/themes/admin_htcyltd/admin/course/edit.html
@@ -126,7 +126,7 @@
                             <div class="layui-form-item">
                                 <label for="input-name" class="layui-form-label"><span class="form-required">*</span>内容形式</label>
                                 <div class="layui-input-block">
-                                    <select class="layui-input" name="type" id="type">
+                                    <select class="layui-input" name="type" id="type" lay-filter="type">
                                         <volist name="types" id="v">
                                             <option value="{$key}"
                                             <eq name="data['type']" value="$key">selected</eq>
@@ -160,7 +160,7 @@
                             <label for="input-name" class="layui-form-label"><span class="form-required">*</span>获取方式</label>
                             <div class="layui-input-block">
                                 <input type="hidden" name="paytype" id="paytype" value="{$data['paytype']}">
-                                <select class="layui-input" disabled>
+                                <select class="layui-input" disabled >
                                     <volist name="paytypes" id="v">
                                         <option value="{$key}"
                                         <eq name="data['paytype']" value="$key">selected</eq>
@@ -239,7 +239,7 @@
                         <div class="layui-form-item">
                             <label for="input-name" class="layui-form-label"><span class="form-required">*</span>状态</label>
                             <div class="layui-input-block">
-                                <select class="layui-input" name="status" id="status">
+                                <select class="layui-input" name="status" id="status" lay-filter="status">
                                     <option value="1"
                                     <eq name="data['status']" value="1">selected</eq>
                                     >立即上架</option>
@@ -368,9 +368,19 @@
             $('#trialval_' + type).show();
         }
 
-        $("#type").on('change', function () {
-            type_change();
-        })
+        // $("#type").on('change', function () {
+        //     type_change();
+        // })
+        layui.use(['layer', 'jquery', 'form'], function () {
+            var layer = layui.layer,
+                $ = layui.jquery,
+                form = layui.form;
+
+            form.on('select(type)', function(data){
+                type_change();
+            });
+        });
+
         type_change();
 
         /* 获取方式处理 */
@@ -391,9 +401,18 @@
             }
         }
 
-        $("#paytype").on('change', function () {
-            paytype_change();
-        })
+        // $("#paytype").on('change', function () {
+        //     paytype_change();
+        // })
+        layui.use(['layer', 'jquery', 'form'], function () {
+            var layer = layui.layer,
+                $ = layui.jquery,
+                form = layui.form;
+
+            form.on('select(paytype)', function(data){
+                paytype_change();
+            });
+        });
         paytype_change();
 
         /* 试学方式处理 */
@@ -426,9 +445,19 @@
             }
         }
 
-        $("#status").on('change', function () {
-            status_change();
-        })
+        // $("#status").on('change', function () {
+        //     status_change();
+        // })
+
+        layui.use(['layer', 'jquery', 'form'], function () {
+            var layer = layui.layer,
+                $ = layui.jquery,
+                form = layui.form;
+
+            form.on('select(status)', function(data){
+                status_change();
+            });
+        });
         status_change();
 
         function getUserList(_this, uid = 0) {
