--- a/eduwanyue_web/themes/admin_htcyltd/admin/setting/configpri.html
+++ b/eduwanyue_web/themes/admin_htcyltd/admin/setting/configpri.html
@@ -268,9 +268,9 @@
                                 </div>
 
                                 <div class="layui-form-item">
-                                    <label for="input-agora_api_id" class="layui-form-label">声网api 客户ID</label>
+                                    <label for="agora-api_id" class="layui-form-label">声网api 客户ID</label>
                                     <div class="layui-input-block">
-                                        <input type="text" class="layui-input" id="input-sound_appid"  name="options[sound_appid]" value="{$config['agora_api_id']|default=''}">
+                                        <input type="text" class="layui-input" id="agora-api_id"  name="options[agora_api_id]" value="{$config['agora_api_id']|default=''}">
                                         声网后台 ->右上角->RESTful API
                                     </div>
                                 </div>
