--- a/eduwanyue_web/themes/admin_htcyltd/portal/admin_page/edit.html
+++ b/eduwanyue_web/themes/admin_htcyltd/portal/admin_page/edit.html
@@ -213,7 +213,7 @@
                 </div>
             </div>
         </div>
-        <div class="layui-col-md3" style="display: none;;">
+        <div class="layui-col-md3" style="">
             <div class="layui-card">
                 <div class="layui-card-header">状态</div>
                 <div class="layui-card-body">
